welcome.lessons.welcome.array.has271.Has271.scala.error
has271:6: error: not found: value ||
      if(nums(k+1)==nums(k)+5 && nums(k+2)==nums(k)-1)||{
                                                      ^